Try optimizing speed for multiple voxels with parallel processing

--- a/scripts/03_pRF_saliency_modelling.ipynb
+++ b/scripts/03_pRF_saliency_modelling.ipynb
@@ -28,10 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "2f968eca-ba36-427c-872e-06307fd04528",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/gpfs01/bartels/user/hbhatnagar/anaconda3/envs/NSD-Saliency/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from scipy.misc import face\n",
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9d645c94-a6fa-480d-bcb4-a33e6eed7a2b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ac6c0a75-3926-419f-9038-8f24b025a1bc",
    "metadata": {},
    "outputs": [],
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d50c4248-2f0f-49cd-9aa2-049664cabb01",
    "metadata": {},
    "outputs": [],
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "df60a52d-6cf0-4abb-8012-9801c18257d0",
    "metadata": {},
    "outputs": [],
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "29c89da1-b7e0-4ac6-9e1b-ac9d9dd94656",
    "metadata": {},
    "outputs": [],
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b3ce751a-4e7b-4986-9770-5b55b5a529ff",
    "metadata": {},
    "outputs": [
@@ -452,7 +461,7 @@
        "[8296 rows x 16 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "3cb47e9c-7c24-4cc2-8d5e-13dacb6b4f5f",
    "metadata": {},
    "outputs": [],
@@ -485,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ae85048f-3263-4547-bd9a-ff1714c4c4b5",
    "metadata": {},
    "outputs": [],
@@ -495,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c27f4878-d78d-4ef5-b8d9-6dbf55d7f783",
    "metadata": {},
    "outputs": [
@@ -614,7 +623,7 @@
        "[7887 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3d92fb02-2620-43a1-8d30-af54187e9aa5",
    "metadata": {},
    "outputs": [],
@@ -637,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "8ae6a558-3389-4822-9dfa-937db9d8e6ed",
    "metadata": {},
    "outputs": [],
@@ -648,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "11241ed4-4a9f-4afe-86df-fadebca6419f",
    "metadata": {},
    "outputs": [
@@ -828,7 +837,7 @@
        "[7887 rows x 7 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "4609d392-2b5f-483b-a259-78c91d9875ab",
    "metadata": {},
    "outputs": [],
@@ -849,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "6800b591-66da-441c-a2a5-8d93cc2d5b3b",
    "metadata": {},
    "outputs": [
@@ -878,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "ebac93c6-9a2c-4118-aa9e-7be5d669c9ed",
    "metadata": {},
    "outputs": [],
@@ -894,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f4566946-1057-4e6b-81b1-3eae07d9dcbf",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1188,7 @@
        "24   -1.273766   41.981494  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "cefee791-76e3-497f-ad67-b20393c2c6a7",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1225,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "6779ab52-4227-4d37-8d0d-b54334a69a93",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1246,7 @@
        "-11"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "371a1480-9f68-4b46-8e0a-301199ffd321",
    "metadata": {},
    "outputs": [],
@@ -1261,17 +1270,15 @@
     "\n",
     "elif sigma == 0:\n",
     "    # Create a 2d space with everything 0 except at the x,y position \n",
-    "    temp = np.zeros((X_SIZE,Y_SIZE))\n",
-    "    temp[math.ceil(mu[0]),math.ceil(mu[0])] = 1\n",
-    "    # mvn = temp\n",
-    "    vals = temp\n",
+    "    vals = np.zeros((X_SIZE,Y_SIZE))\n",
+    "    vals[math.ceil(mu[0]),math.ceil(mu[0])] = 1\n",
     "    vals1d = vals.reshape(-1)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "a4fcf419-7e5a-40f4-8dca-5181f45f1e0b",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "03a054f2-de19-45aa-9e57-fa48f3f8a998",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1306,7 @@
        "array([0., 0., 0., ..., 0., 0., 0.])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,17 +1317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "62fe9415-3d41-4ba6-89d7-5095d157fccf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7efd834079d0>"
+       "<matplotlib.image.AxesImage at 0x7f5d5a4b9400>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1341,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "0d37c07d-09ae-46d3-847b-36187276fc7a",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1358,7 @@
        "1.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "70c2e8a3-e7d0-49d4-95c6-5fec30bb1d98",
    "metadata": {},
    "outputs": [],
@@ -1372,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "32567ec9-8b33-4d6e-bbb1-9f9fdd4133b1",
    "metadata": {},
    "outputs": [],
@@ -1381,21 +1388,21 @@
     "    \n",
     "    voxels_num = dataframe.shape[0] \n",
     "    voxel_map = np.ones([160000,])\n",
+    "    \n",
+    "    ys, xs = np.mgrid[Y_SIZE:0:-1, 0:X_SIZE]\n",
+    "    ys -= Y_SIZE // 2\n",
+    "    xs -= X_SIZE // 2\n",
+    "\n",
+    "    x1d = xs.ravel()\n",
+    "    y1d = ys.ravel()\n",
     "\n",
     "    for voxel_idx in range(0,voxels_num):\n",
-    "        \n",
     "        sigma = dataframe[\"v1_sigma_px\"][voxel_idx]\n",
     "        mu = [dataframe[\"x_coord\"][voxel_idx],dataframe[\"y_coord\"][voxel_idx]]\n",
     "        \n",
-    "        #print(f\"Voxel {voxel_idx}, sigma = {sigma}, mu = {mu}\")\n",
-    "\n",
-    "        ys, xs = np.mgrid[Y_SIZE:0:-1, 0:X_SIZE]\n",
-    "        ys -= Y_SIZE // 2\n",
-    "        xs -= X_SIZE // 2\n",
-    "\n",
-    "        x1d = xs.ravel()\n",
-    "        y1d = ys.ravel()\n",
-    "\n",
+    "        # print(f\"Voxel {voxel_idx}, sigma = {sigma}, mu = {mu}\")\n",
+    "        print(f\"Voxel {voxel_idx}\")\n",
+    "        \n",
     "        if sigma !=0:\n",
     "            mvn = stats.multivariate_normal(mu, sigma)\n",
     "            vals1d = mvn.pdf(np.vstack((y1d, x1d)).T)# 160000 x 1 \n",
@@ -1404,10 +1411,8 @@
     "        elif sigma == 0:\n",
     "            # Create a matrix with where everything is 0 except at the pixels of x,y , where it's 1\n",
     "            # So it will sum to 1\n",
-    "            temp = np.zeros((X_SIZE,Y_SIZE))\n",
-    "            temp[math.ceil(mu[0]),math.ceil(mu[0])] = 1\n",
-    "            # mvn = temp\n",
-    "            vals = temp\n",
+    "            vals = np.zeros((X_SIZE,Y_SIZE))\n",
+    "            vals[math.ceil(mu[0]),math.ceil(mu[0])] = 1\n",
     "            vals1d = vals.reshape(-1)\n",
     "        \n",
     "        voxel_map = np.vstack((voxel_map,vals1d))\n",
@@ -1417,12 +1422,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "8a69af48-9fa1-4566-8a6a-667bbe23feb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "voxel_map = generate_voxel_maps(prf_v1_subj1)"
+    "# voxel_map = generate_voxel_maps(prf_v1_subj1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19426eca-2bc6-4a36-972c-f280a1402c63",
+   "metadata": {},
+   "source": [
+    "## Trying out multiprocessing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a4f5d61e-8100-4983-8cd9-cd28620aa0f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numba import jit\n",
+    "import multiprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cb28a84e-bae7-4396-a580-54348cfb073d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of cpu :  64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of cpu : \", multiprocessing.cpu_count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8269d386-f572-4836-8691-49ab72cb0196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4467c386-d8bf-4978-95e4-de4f248bfd25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_voxel_maps_single(pdf_args):\n",
+    "        \n",
+    "    print(\"start of function\")\n",
+    "    # print(pdf_args)\n",
+    "    ys, xs = np.mgrid[Y_SIZE:0:-1, 0:X_SIZE]\n",
+    "    ys -= Y_SIZE // 2\n",
+    "    xs -= X_SIZE // 2\n",
+    "\n",
+    "    x1d = xs.ravel()\n",
+    "    y1d = ys.ravel()\n",
+    "\n",
+    "    # Takes the dataframe and creates a list of inputs for the pdf generation \n",
+    "    sigma = pdf_args[0]\n",
+    "    mu = pdf_args[1]\n",
+    "    \n",
+    "    if sigma !=0:\n",
+    "        mvn = stats.multivariate_normal(mu, sigma)\n",
+    "        vals1d = mvn.pdf(np.vstack((y1d, x1d)).T)# 160000 x 1 \n",
+    "        vals = vals1d.reshape(X_SIZE, Y_SIZE)\n",
+    "\n",
+    "    elif sigma == 0:\n",
+    "        vals = np.zeros((X_SIZE,Y_SIZE))\n",
+    "        vals[math.ceil(mu[0]),math.ceil(mu[0])] = 1\n",
+    "        vals1d = vals.reshape(-1)    \n",
+    "    \n",
+    "    print(f\"Voxel {voxel_idx}, sigma = {sigma}, mu = {mu}\")\n",
+    "    \n",
+    "    return vals1d #1x160000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "253df262-9f9b-4bc1-9a38-72df9bc5e486",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import concurrent.futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "647f5688-040c-46bd-bc43-0d4eaf98df27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start of function\n",
+      "start of function\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ONLY FOR V1 - Subj1 \n",
+    "voxels_num = prf_v1_subj1.shape[0] # 7887 voxels \n",
+    "\n",
+    "# Create two lists \n",
+    "sigma = prf_v1_subj1[\"v1_sigma_px\"]\n",
+    "mu = [prf_v1_subj1[\"x_coord\"],prf_v1_subj1[\"y_coord\"]]\n",
+    "\n",
+    "pdf_args = [sigma,mu]\n",
+    "\n",
+    "with concurrent.futures.ProcessPoolExecutor() as executor:\n",
+    "    executor.map(generate_voxel_maps_single, pdf_args)"
    ]
   },
   {
