generate correlations with observed beta refactor code in previous notebooks extend previous functions to generate data for V2, V3 and V4 regions

--- a/scripts/02_pRF_sanity_check_multisubj.ipynb
+++ b/scripts/02_pRF_sanity_check_multisubj.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ab4f03ad-15e3-4ef1-b99a-3ac9c411235a",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3f763114-c5be-4cc8-bcca-5fd73e2285df",
@@ -59,14 +67,6 @@
    "outputs": [],
    "source": [
     "DEVICE = 'cpu'\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d48d7f5c-3c6f-4327-84cf-01aaa4a428ed",
-   "metadata": {},
-   "source": [
-    "Get a relative score for left vs right half of each image"
    ]
   },
   {
