Generate saliency maps for ICF

--- a/scripts/07_Low_level_image_feature_extraction.ipynb
+++ b/scripts/07_Low_level_image_feature_extraction.ipynb
@@ -812,8 +812,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Example:</b> Use yellow boxes for examples that are not \n",
-    "inside code cells, or use for mathematical formulas if needed.\n",
+    "<b>Note:</b> This is the MATLAB code for generating saliency maps using SaliencyToolbox\n",
     "</div>\n",
     "\n"
    ]
